[package]
name = "dac5578"
version = "0.3.0"
edition = "2018"

authors = ["Christian Maniewski <code@chmanie.com>"]
license = "MIT/Apache-2.0"
description = "Texas Instruments DAC5578 Driver for Rust Embedded HAL"
repository = "https://github.com/chmanie/dac5578"
categories = ["no-std", "embedded"]
keywords = ["dac", "i2c"]
readme = "README.md"

[dependencies]
embedded-hal = "0.2.5"

[dev-dependencies]
embedded-hal-mock = "0.7.2"
